Sample Data for everything except the intersection tables

--- a/html/appointments/appointments.html
+++ b/html/appointments/appointments.html
@@ -80,12 +80,56 @@
 
                     <tr class = "Appointments-info">
                         <th>1</th>
-                        <td>Dylan Brehm</td>
-                        <td>Dylan Brehm</td>
-                        <td>Beaver Clinic</td>
-                        <td>02/14/2025</td>
-                        <td>Ongoing sore throat and sick roommates.</td>
-                        <th><a href = "./edit_appointments.html">edit</a></th>
+                        <td>Alice Smith</td>
+                        <td>Dr. Adams Johnson</td>
+                        <td>Cardiology</td>
+                        <td>2025-02-10 09:00:00</td>
+                        <td>NULL</td>
+                        <th><a href = "./edit_appointments.html#1">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Appointments-info">
+                        <th>2</th>
+                        <td>John Doe</td>
+                        <td>Dr. Baker Lee</td>
+                        <td>Neurology</td>
+                        <td>2025-02-11 10:30:00</td>
+                        <td>NULL</td>
+                        <th><a href = "./edit_appointments.html#2">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Appointments-info">
+                        <th>3</th>
+                        <td>Maria Lopez</td>
+                        <td>Dr. Lee Williams</td>
+                        <td>Internal Medicine</td>
+                        <td>2025-02-12 14:00:00</td>
+                        <td>NULL</td>
+                        <th><a href = "./edit_appointments.html#3">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Appointments-info">
+                        <th>4</th>
+                        <td>David Kim</td>
+                        <td>Dr. Jenkins Sue</td>
+                        <td>Orthopedics</td>
+                        <td>2025-02-13 16:15:00</td>
+                        <td>NULL</td>
+                        <th><a href = "./edit_appointments.html#4">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Appointments-info">
+                        <th>5</th>
+                        <td>Emily Zhang</td>
+                        <td>Dr. Who Shane</td>
+                        <td>General Surgery</td>
+                        <td>2025-02-14 08:45:00</td>
+                        <td>NULL</td>
+                        <th><a href = "./edit_appointments.html#5">edit</a></th>
                         <th><a href = "#">delete</a></th>
                     </tr>
 
