--- a/html/departments/departments.html
+++ b/html/departments/departments.html
@@ -66,17 +66,49 @@
                 <table>
                     <tr class = attribute-titles>
                         <th width="5%">ID</th>
-                        <th width="35%">name</th>
-                        <th width="40%">location</th>
+                        <th width="35%">Name</th>
+                        <th width="40%">Location</th>
                         <th width="10%"></th>
                         <th width="10%"></th>
                     </tr>
 
                     <tr class = "Departments-info">
                         <th>1</th>
-                        <td>Beaver Clinic</td>
-                        <td>1800 Beaver Lane Corvallis, OR 97330</td>
-                        <th><a href = "./edit_departments.html">edit</a></th>
+                        <td>Cardiology</td>
+                        <td>2nd Floor</td>
+                        <th><a href = "./edit_departments.html#1">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Departments-info">
+                        <th>2</th>
+                        <td>Neurology</td>
+                        <td>3rd Floor</td>
+                        <th><a href = "./edit_departments.html#2">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Departments-info">
+                        <th>3</th>
+                        <td>Internal Medicine</td>
+                        <td>1st Floor</td>
+                        <th><a href = "./edit_departments.html#3">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Departments-info">
+                        <th>4</th>
+                        <td>Orthopedics</td>
+                        <td>4th Floor</td>
+                        <th><a href = "./edit_departments.html#4">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Departments-info">
+                        <th>5</th>
+                        <td>General Surgery</td>
+                        <td>5th Floor</td>
+                        <th><a href = "./edit_departments.html#5">edit</a></th>
                         <th><a href = "#">delete</a></th>
                     </tr>
 
