--- a/html/departments/edit_departments.html
+++ b/html/departments/edit_departments.html
@@ -66,8 +66,8 @@
                     </tr>
 
                     <tr class = "Departments-info">
-                        <td><input id = patient_id class="input-attribute" value = "Beaver Clinic"></td>
-                        <td><input id = treatment_id class="input-attribute" value = "1800 Beaver Lane Corvallis, OR 97330"></td>
+                        <td><input id = patient_id class="input-attribute" value = "Cardiology"></td>
+                        <td><input id = treatment_id class="input-attribute" value = "2nd Floor"></td>
                     </tr>
 
                 </table>
