--- a/html/doctors/doctors.html
+++ b/html/doctors/doctors.html
@@ -76,10 +76,46 @@
 
                     <tr class = "Doctors-info">
                         <th>1</th>
-                        <td>Dylan</td>
-                        <td>Brehm</td>
-                        <td>Ears, Nose, and Throat (ENT)</td>
-                        <th><a href = "./edit_doctors.html">edit</a></th>
+                        <td>Dr. Adams</td>
+                        <td>Johnson</td>
+                        <td>Cardiology</td>
+                        <th><a href = "./edit_doctors.html#1">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Doctors-info">
+                        <th>2</th>
+                        <td>Dr. Baker</td>
+                        <td>Lee</td>
+                        <td>Neurology</td>
+                        <th><a href = "./edit_doctors.html#2">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Doctors-info">
+                        <th>3</th>
+                        <td>Dr. Lee</td>
+                        <td>Williams</td>
+                        <td>Orthopedics</td>
+                        <th><a href = "./edit_doctors.html#3">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Doctors-info">
+                        <th>4</th>
+                        <td>Dr. Jenkins</td>
+                        <td>Sue</td>
+                        <td>General Surgery</td>
+                        <th><a href = "./edit_doctors.html#4">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Doctors-info">
+                        <th>5</th>
+                        <td>Dr. Who</td>
+                        <td>Shane</td>
+                        <td>Internal Medicine</td>
+                        <th><a href = "./edit_doctors.html#5">edit</a></th>
                         <th><a href = "#">delete</a></th>
                     </tr>
 
