--- a/html/doctors/edit_doctors.html
+++ b/html/doctors/edit_doctors.html
@@ -67,9 +67,9 @@
                     </tr>
 
                     <tr class = "Doctors-info">
-                        <td><input id = first_name class="input-attribute" value = "Dylan"></td>
-                        <td><input id = last_name class="input-attribute" value = "Brehm"></td>
-                        <td><input id = specialization class="input-attribute" value = "Ears, Nose, and Throat (ENT)"></td>
+                        <td><input id = first_name class="input-attribute" value = "Dr. Adams"></td>
+                        <td><input id = last_name class="input-attribute" value = "Johnson"></td>
+                        <td><input id = specialization class="input-attribute" value = "Cardiology"></td>
                     </tr>
 
                 </table>
