--- a/html/patients/patients.html
+++ b/html/patients/patients.html
@@ -91,8 +91,8 @@
 
                     <tr class = "Patients-info">
                         <th>2</th>
-                        <td>John Doe</td>
-                        <td>Smith</td>
+                        <td>John</td>
+                        <td>Doe</td>
                         <td>30</td>
                         <td>555-5678</td>
                         <td>3 - Moderate</td>
