--- a/html/treatments/edit_treatments.html
+++ b/html/treatments/edit_treatments.html
@@ -66,8 +66,8 @@
                     </tr>
 
                     <tr class = "Treatments-info">
-                        <td><input id = treatment_description class="input-attribute" value="Take 2 advil every 4 hours."></td>
-                        <td><input id = cost class="input-attribute" value="$0.02"></td>
+                        <td><input id = treatment_description class="input-attribute" value="Blood Pressure Control"></td>
+                        <td><input id = cost class="input-attribute" value="$150.00"></td>
                     </tr>
 
                 </table>
