--- a/html/treatments/treatments.html
+++ b/html/treatments/treatments.html
@@ -75,9 +75,41 @@
 
                     <tr class = "Treatments-info">
                         <th>1</th>
-                        <td>Take 2 advil every 4 hours.</td>
-                        <td>$0.01</td>
-                        <th><a href = "./edit_Treatments.html">edit</a></th>
+                        <td>Blood Pressure Control</td>
+                        <td>$150.00</td>
+                        <th><a href = "./edit_Treatments.html#1">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Treatments-info">
+                        <th>2</th>
+                        <td>MRI Scan</td>
+                        <td>$500.00</td>
+                        <th><a href = "./edit_Treatments.html#2">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Treatments-info">
+                        <th>3</th>
+                        <td>Routine Checkup</td>
+                        <td>$200.00</td>
+                        <th><a href = "./edit_Treatments.html#3">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Treatments-info">
+                        <th>4</th>
+                        <td>Knee Surgery</td>
+                        <td>$1000.00</td>
+                        <th><a href = "./edit_Treatments.html#4">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Treatments-info">
+                        <th>5</th>
+                        <td>Appendectomy</td>
+                        <td>$3000.00</td>
+                        <th><a href = "./edit_Treatments.html#5">edit</a></th>
                         <th><a href = "#">delete</a></th>
                     </tr>
 
