Completed Step 3 Final version of HTML

--- a/html/appointments/new_appointments.html
+++ b/html/appointments/new_appointments.html
@@ -71,18 +71,31 @@
                     <tr class = "Appointments-info">
                         <td><select id = patient_name class="input-attribute">
                             <option value = none></option>
-                            <option value = 1>Dylan Brehm</option>
+                            <option value = 1>Alice Smith</option>
+                            <option value = 2>John Doe</option>
+                            <option value = 3>Maria Lopez</option>
+                            <option value = 4>David Kim</option>
+                            <option value = 5>Emily Zhang</option>
                         </select></td>
                         <td><select id = doctor_name class="input-attribute">
                             <option value = none></option>
-                            <option value = 1>Dylan Brehm</option>
+                            <option value = 1>Dr. Adams Johnson</option>
+                            <option value = 2>Dr. Baker Lee</option>
+                            <option value = 3>Dr. Lee Williams</option>
+                            <option value = 4>Dr. Jenkins Sue</option>
+                            <option value = 5>Dr. Who Shane</option>
                         </select></td>
                         <td><select id = department_name class="input-attribute">
                             <option value = none></option>
-                            <option value = 1>Beaver Clinic</option>
+                            <option value = 1>Cardiology</option>
+                            <option value = 2>Neurology</option>
+                            <option value = 3>Internal Medicine</option>
+                            <option value = 4>Orthopedics</option>
+                            <option value = 5>General Surgery</option>
                         </select></td>
-                        <td><input type="datetime-local" id = appointment_date class="input-attribute"></td>
-                        <td><input id = reason class="input-attribute"></td>
+                        <!-- how to set default value for datetime? -->
+                        <td><input type="datetime-local" id = appointment_date class="input-attribute" value="2025-02-10 09:00 am"></td> 
+                        <td><input id = reason class="input-attribute" value=""></td>
                     </tr>
 
                 </table>
