--- a/html/doctors_departments/doctors_departments.html
+++ b/html/doctors_departments/doctors_departments.html
@@ -74,9 +74,41 @@
 
                     <tr class = "Doctors_Departments-info">
                         <th>1</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <th><a href = "./edit_doctors_departments.html">edit</a></th>
+                        <td>Dr. Adams Johnson</td>
+                        <td>Cardiology</td>
+                        <th><a href = "./edit_doctors_departments.html#1">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Doctors_Departments-info">
+                        <th>2</th>
+                        <td>Dr. Baker Lee</td>
+                        <td>Neurology</td>
+                        <th><a href = "./edit_doctors_departments.html#2">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Doctors_Departments-info">
+                        <th>3</th>
+                        <td>Dr. Lee Williams</td>
+                        <td>Internal Medicine</td>
+                        <th><a href = "./edit_doctors_departments.html#3">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Doctors_Departments-info">
+                        <th>4</th>
+                        <td>Dr. Lee Williams</td>
+                        <td>Cardiology</td>
+                        <th><a href = "./edit_doctors_departments.html#4">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Doctors_Departments-info">
+                        <th>5</th>
+                        <td>Dr. Baker Lee</td>
+                        <td>Orthopedics</td>
+                        <th><a href = "./edit_doctors_departments.html#5">edit</a></th>
                         <th><a href = "#">delete</a></th>
                     </tr>
 
