--- a/html/doctors_departments/edit_doctors_departments.html
+++ b/html/doctors_departments/edit_doctors_departments.html
@@ -67,12 +67,20 @@
 
                     <tr class = "Doctors_Departments-info">
                         <td><select id = doctor_name class="input-attribute">
-                            <option value = empty></option>
-                            <option value = "1" selected>Dylan Brehm</option>
+                            <option value = none></option>
+                            <option value = 1 selected>Dr. Adams Johnson</option>
+                            <option value = 2>Dr. Baker Lee</option>
+                            <option value = 3>Dr. Lee Williams</option>
+                            <option value = 4>Dr. Jenkins Sue</option>
+                            <option value = 5>Dr. Who Shane</option>
                         </select></td>
                         <td><select id = department_name class="input-attribute">
-                            <option value = empty></option>
-                            <option value = "1" selected>Beaver Clinic</option>
+                            <option value = none></option>
+                            <option value = 1 selected>Cardiology</option>
+                            <option value = 2>Neurology</option>
+                            <option value = 3>Internal Medicine</option>
+                            <option value = 4>Orthopedics</option>
+                            <option value = 5>General Surgery</option>
                         </select></td>
                     </tr>
 
