--- a/html/patients_treatments/patients_treatments.html
+++ b/html/patients_treatments/patients_treatments.html
@@ -74,9 +74,41 @@
 
                     <tr class = "Patients_Treatments-info">
                         <th>1</th>
-                        <td>Dylan Brehm</td>
-                        <td>Take 2 advil every 4 hours.</td>
-                        <th><a href = "./edit_patients_treatments.html">edit</a></th>
+                        <td>Alice Smith</td>
+                        <td>Blood Pressure Control</td>
+                        <th><a href = "./edit_patients_treatments.html#1">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Patients_Treatments-info">
+                        <th>2</th>
+                        <td>John Doe</td>
+                        <td>MRI Scan</td>
+                        <th><a href = "./edit_patients_treatments.html#2">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Patients_Treatments-info">
+                        <th>3</th>
+                        <td>Maria Lopez</td>
+                        <td>Routine Checkup</td>
+                        <th><a href = "./edit_patients_treatments.html#3">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Patients_Treatments-info">
+                        <th>4</th>
+                        <td>David Kim</td>
+                        <td>Knee Surgery</td>
+                        <th><a href = "./edit_patients_treatments.html#4">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Patients_Treatments-info">
+                        <th>5</th>
+                        <td>Emily Zhang</td>
+                        <td>Appendectomy</td>
+                        <th><a href = "./edit_patients_treatments.html#5">edit</a></th>
                         <th><a href = "#">delete</a></th>
                     </tr>
 
