--- a/html/patients_treatments/new_patients_treatments.html
+++ b/html/patients_treatments/new_patients_treatments.html
@@ -67,12 +67,20 @@
 
                     <tr class = "Patients_Treatments-info">
                         <td><select id = patient_name class="input-attribute">
-                            <option value = empty></option>
-                            <option value = 1>Dylan Brehm</option>
+                            <option value = none></option>
+                            <option value = 1>Alice Smith</option>
+                            <option value = 2>John Doe</option>
+                            <option value = 3>Maria Lopez</option>
+                            <option value = 4>David Kim</option>
+                            <option value = 5>Emily Zhang</option>
                         </select></td>
-                        <td><select id = treatment_id class="input-attribute">
+                        <td><select id = treatment_desc class="input-attribute">
                             <option value = empty></option>
-                            <option value = 1>Take 2 advil every 4 hours.</option>
+                            <option value = 1>Blood Pressure Control</option>
+                            <option value = 2>MRI Scan</option>
+                            <option value = 3>Routine Checkup</option>
+                            <option value = 4>Knee Surgery</option>
+                            <option value = 5>Appendectomy</option>
                         </select></td>
                     </tr>
 
