--- a/html/treatments/treatments.html
+++ b/html/treatments/treatments.html
@@ -77,7 +77,7 @@
                         <th>1</th>
                         <td>Blood Pressure Control</td>
                         <td>$150.00</td>
-                        <th><a href = "./edit_Treatments.html#1">edit</a></th>
+                        <th><a href = "./edit_treatments.html#1">edit</a></th>
                         <th><a href = "#">delete</a></th>
                     </tr>
 
@@ -85,7 +85,7 @@
                         <th>2</th>
                         <td>MRI Scan</td>
                         <td>$500.00</td>
-                        <th><a href = "./edit_Treatments.html#2">edit</a></th>
+                        <th><a href = "./edit_treatments.html#2">edit</a></th>
                         <th><a href = "#">delete</a></th>
                     </tr>
 
@@ -93,7 +93,7 @@
                         <th>3</th>
                         <td>Routine Checkup</td>
                         <td>$200.00</td>
-                        <th><a href = "./edit_Treatments.html#3">edit</a></th>
+                        <th><a href = "./edit_treatments.html#3">edit</a></th>
                         <th><a href = "#">delete</a></th>
                     </tr>
 
@@ -101,7 +101,7 @@
                         <th>4</th>
                         <td>Knee Surgery</td>
                         <td>$1000.00</td>
-                        <th><a href = "./edit_Treatments.html#4">edit</a></th>
+                        <th><a href = "./edit_treatments.html#4">edit</a></th>
                         <th><a href = "#">delete</a></th>
                     </tr>
 
@@ -109,7 +109,7 @@
                         <th>5</th>
                         <td>Appendectomy</td>
                         <td>$3000.00</td>
-                        <th><a href = "./edit_Treatments.html#5">edit</a></th>
+                        <th><a href = "./edit_treatments.html#5">edit</a></th>
                         <th><a href = "#">delete</a></th>
                     </tr>
 
